fixed spacing issues on contact page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -917,14 +917,14 @@ color: white;
     color: black;
     font-size: 20px;
     padding-left: 5px;
-    height: 38px;
-    width:35px;
+    height: 4.3vh;
+    width:3vw;
     text-align: center;
     background-color: white;
 }
 
 .icon .facon {
-  margin-top: 9px;
+  margin-top: 0.6vh;
 }
 
 .input-field {
